--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>Some header</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, quaerat optio quidem odit perspiciatis eos rerum vel libero non ipsa ex iusto assumenda eveniet, numquam eaque voluptatem architecto et? Iste enim non aliquam velit mollitia neque autem saepe dicta sequi deleniti aspernatur, consequuntur natus voluptas officia dolorem quo minima fuga.</p>
     <hr>
+
+    <form action="smth.php">
+        <input type="text" name="user-name" id="userName">
+    </form>
 </body>
 </html>
